# AutoBackupCLI

./: CMakeLists.txt
.github/workflows/: build.yml
import/: CMakeLists.txt
include/: ConfFile.h  Configurator.h  Dir.h  Loader.h  Packager.h  Print.h  Runner.h  Search.h
src/: CMakeLists.txt  ConfFile.cpp  Configurator.cpp  Dir.cpp  Loader.cpp  Packager.cpp  Print.cpp  Runner.cpp  Search.cpp  main.cpp
src/include/: Loader.h  Pack.h  Runner.h  Search.h
src/src/: Loader.cpp  Pack.cpp  Runner.cpp  Search.cpp  main.cpp
